--- a/src/css/global.css
+++ b/src/css/global.css
@@ -101,3 +101,25 @@
   --ion-font-family: "Raleway", sans-serif;
   --ion-font-family-secondary: "Orbitron", sans-serif;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --ion-color-base: var(--ion-color-dark);
+    --ion-color-base-shade: var(--ion-color-dark-shade);
+    --ion-color-base-tint: var(--ion-color-dark-tint);
+    --ion-background-color: var(--ion-color-dark);
+    --ion-background-color-rgb: var(--ion-color-dark-rgb);
+    --ion-text-color: var(--ion-color-dark-contrast);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --ion-color-base: var(--ion-color-light);
+    --ion-color-base-shade: var(--ion-color-light-shade);
+    --ion-color-base-tint: var(--ion-color-light-tint);
+    --ion-background-color: var(--ion-color-light);
+    --color: var(--ion-color-light-contrast);
+    --ion-background-color-rgb: var(--ion-color-light-rgb);
+  }
+}
